--- a/Week1/Assess Activity/text.html
+++ b/Week1/Assess Activity/text.html
@@ -12,6 +12,29 @@
 On 30 September 2004, researchers from the NMNS (Museum of Nature and Science) of Tokyo, Japan and the OWA (Ogasawara Whale Watching Association) took the first images of a live giant squid in its natural habitat. Several of the 556 photographs were released a year later. The NMNS and OWA successfully filmed a live adult giant squid for the first time on 4 December 2006.
 
 From Wikipedia, the free encyclopedia - http://en.wikipedia.org/wiki/Giant_squid</p>
+		
+		<h1>Halloween White Chocolate Bark</h1>
+		<p>An easy, sweet and festive snack perfect for Halloween, featuring colorful Candy Corn and other treats. Serves 20.
+
+Recipe from Free Recipes - http://www.freerecipes.org</p>
+			<div id = "ingredients">
+				<ul>
+					<li> 15 Halloween Oreos with orange filling (chunks)</li>
+					<li>1 1/2 cups salted pretzels (chunks)</li>
+					<li>1/3 cup raisins</li>
+					<li>1 2/3 pounds white baking chocolate (chunks)</li>
+					<li>2 1/2 cups candy corn</li>
+					<li>1/2 cup Reese's Pieces</li>
+					<li>sprinkles for garnish (optional)</li>
+				</ul>
+			<div id = "instructions">
+				<ol>
+					<li>Grease a small baking sheet lightly.</li>
+					<li>Scatter oreos, pretzels, Reese's Pieces and raisins across cookie sheet evenly.</li>
+					<li>1. In a pot, bring water to a simmer. Place bowl with chocolate chunks on top of the pot, stir constantly until chocolate is almost completely melted (lumps will remain), remove from the heat, stir until completely smooth.</li>
+					<li>2. Poor chocolate over the cookie sheet, covering the filling. Sprinkle with candy corn and Halloween colored sprinkles. Let cool at room temperature until hardened. Break into pieces and serve!</li>
+
+					
 	
 	</body>
 </html>
