added headings for ingredients and instructions

--- a/Week1/Assess Activity/text.html
+++ b/Week1/Assess Activity/text.html
@@ -17,6 +17,7 @@ From Wikipedia, the free encyclopedia - http://en.wikipedia.org/wiki/Giant_squid
 		<p>An easy, sweet and festive snack perfect for Halloween, featuring colorful Candy Corn and other treats. Serves 20.
 
 Recipe from Free Recipes - http://www.freerecipes.org</p>
+		<h2>Ingredients</h2>
 			<div id = "ingredients">
 				<ul>
 					<li> 15 Halloween Oreos with orange filling (chunks)</li>
@@ -27,6 +28,7 @@ Recipe from Free Recipes - http://www.freerecipes.org</p>
 					<li>1/2 cup Reese's Pieces</li>
 					<li>sprinkles for garnish (optional)</li>
 				</ul>
+		<h2>Instructions</h2>
 			<div id = "instructions">
 				<ol>
 					<li>Grease a small baking sheet lightly.</li>
