--- a/Week2/Monroe-Danielle-final-project2 copy/transport.html
+++ b/Week2/Monroe-Danielle-final-project2 copy/transport.html
@@ -4,9 +4,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<title> Assessment Project 1</title>
+		<title> Assessment Project 2</title>
 	</head>
-	<link/ href="css/style.css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet" />
 	<body>
 		
 		<h1 id="top"> My Favorite Transportation</h1>
@@ -14,12 +14,14 @@
 		<p>Cars one of the best inventions man has yet to create. They come in
 		different shapes, sizes, and colors. Below is a list list of some of my
 		favorites.</p>
-		<ul>
-			<li><a href="#lamborghini">Lamborghini</a></li>
-			<li><a href="#audi">Audi</a></li>
-			<li><a href="#ford"> Ford</a></li>
+		<div>
+			<ul>
+				<li><a href="#lamborghini">Lamborghini</a></li>
+				<li><a href="#audi">Audi</a></li>
+				<li><a href="#ford"> Ford</a></li>
 			
-		</ul>
+			</ul>
+		</div>
 		<h2 id="lamborghini"> Lamborghini Aventador</h2>
 		
 	
@@ -32,13 +34,16 @@
 		Lamborghini announced that it had already sold over 12 months of the
 		production vehicles, with deliveries starting in the second half of
 		2011.[5]</p>
-		<figure>
+		<figure id="lamborghini">
 			<a href="http://www.flickr.com/photos/10797471@N02/10619307795/"> <br>Ciorra
 			Photography</a> via <a href="http://compfight.com">Compfight</a> <a
 			href="https://creativecommons.org/licenses/by-nc-nd/2.0/">cc <br><br></a>
 
+			
 			<img src="images/lamborghini.jpg"
-				alt="Lamborghini Aventador" /> 
+				alt="Lamborghini Aventador"
+				width: 3861
+				height=2574 /> 
 			<figcaption> The luxurious Lamborghini Aventador
 		</figure>
 		
