--- a/Week2/Monroe-Danielle-final-project2 copy/index.html
+++ b/Week2/Monroe-Danielle-final-project2 copy/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8"/>
 		<title> Assessment Project 2</title>
 	</head>
-	<link href="css/style.css" rel="stylesheet" />
+	<link href="css/main.css" rel="stylesheet" />
 	<body>
 		
 		<h1 id="top"> My Favorite Transportation</h1>
