--- a/Week3/Monroe-Danielle-final-project3/index.html
+++ b/Week3/Monroe-Danielle-final-project3/index.html
@@ -8,6 +8,7 @@
 		<link href="css/main.css" rel="stylesheet" />
 	</head>
 	
+	
 	<body>
 		
 		<h1 id="top"> My Favorite Transportation</h1>
@@ -22,10 +23,11 @@
 				<li><a href="#ford"> Ford</a></li>
 			
 			</ul>
+		<div id="transport">
 		
 			<h2 id="lamborghini"> Lamborghini Aventador</h2>
-				<p id="lamborghini info">
-					<figure class="lamborghini">
+				
+					<figure>
 					<a href="http://www.flickr.com/photos/10797471@N02/10619307795/"> <br>Ciorra
 					Photography</a> via <a href="http://compfight.com">Compfight</a> <a
 					href="https://creativecommons.org/licenses/by-nc-nd/2.0/">cc <br><br></a>
@@ -37,7 +39,7 @@
 						height="150" /> 
 						<figcaption> The luxurious Lamborghini Aventador
 					</figure>
-		
+		<p id= "lamborghini-info>
 			The Lamborghini Aventador is a two-door, two-seater sports car publicly
 			introduced by Lamborghini at the Geneva Motor Show on 28 February 2011,
 			five months after its initial unveiling in Sant'Agata Bolognese.[2]
@@ -108,7 +110,7 @@
 			alt="Ford Fiesta" />
 			<figcaption> The Ford Fiesta. One quick little monster
 		</figure>
-		
+	</div>	
 		<h3 id="gallery"> Gallery </h3>
 			
 		
@@ -118,5 +120,6 @@
 			<li><a href="#audi">Audi</a></li>
 			<li><a href="#ford"> Ford</a></li>
 		</ol>
+	
 	</body>
 </html>
