--- a/Week3/Monroe-Danielle-final-project3/index.html
+++ b/Week3/Monroe-Danielle-final-project3/index.html
@@ -1,19 +1,19 @@
 
 
+
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
 		<title> Assessment Project 2</title>
-		<link href="css/main.css" rel="stylesheet" />
 	</head>
-	
-	
+	<link href="css/main.css" rel="stylesheet" />
 	<body>
 		
 		<h1 id="top"> My Favorite Transportation</h1>
 		<br>
-		<p>Cars one of the best inventions man has yet to create. They come in
+		<p id="start">Cars one of the best inventions man has yet to create. They come in
 		different shapes, sizes, and colors. Below is a list list of some of my
 		favorites.</p>
 		<div>
@@ -23,23 +23,24 @@
 				<li><a href="#ford"> Ford</a></li>
 			
 			</ul>
-		<div id="transport">
+		</div>
+		<h2 id="lamborghini-head"> Lamborghini Aventador</h2>
 		
-			<h2 id="lamborghini"> Lamborghini Aventador</h2>
-				
-					<figure>
-					<a href="http://www.flickr.com/photos/10797471@N02/10619307795/"> <br>Ciorra
-					Photography</a> via <a href="http://compfight.com">Compfight</a> <a
-					href="https://creativecommons.org/licenses/by-nc-nd/2.0/">cc <br><br></a>
+	
+		<p id="lamborghini-info">
+			<figure id="lamborghini">
+				<a href="http://www.flickr.com/photos/10797471@N02/10619307795/"> <br>Ciorra
+				Photography</a> via <a href="http://compfight.com">Compfight</a> <a
+				href="https://creativecommons.org/licenses/by-nc-nd/2.0/">cc <br><br></a>
 
 			
-					<img src="images/lamborghini.jpg"
-						alt="Lamborghini Aventador"
-						width: 250
-						height="150" /> 
-						<figcaption> The luxurious Lamborghini Aventador
-					</figure>
-		<p id= "lamborghini-info>
+				<img src="images/lamborghini.jpg"
+					alt="Lamborghini Aventador"
+					width: 400
+					height=300 /> 
+				<figcaption> The luxurious Lamborghini Aventador
+			</figure>
+		
 			The Lamborghini Aventador is a two-door, two-seater sports car publicly
 			introduced by Lamborghini at the Geneva Motor Show on 28 February 2011,
 			five months after its initial unveiling in Sant'Agata Bolognese.[2]
@@ -49,11 +50,9 @@
 			Lamborghini announced that it had already sold over 12 months of the
 			production vehicles, with deliveries starting in the second half of
 			2011.[5]</p>
-			
-	</div id="transport2">
 		
-		<h2 class="audi"> Audi R8</h2>
-		<p class="audi">The Audi R8[5] (Typ 42)[7] is a mid-engine, 2-seater sports car,[5][8]
+		<h2 id="audi"> Audi R8</h2>
+		<p id="audi">The Audi R8[5] (Typ 42)[7] is a mid-engine, 2-seater sports car,[5][8]
 		which uses Audi's trademark quattro permanent all-wheel drive
 		system.[5][9] It was introduced by the German automaker Audi AG in 2006.
 
@@ -87,20 +86,8 @@
 			<figcaption> The Chic Audi R8
 		</figure>
 			
-		<h2 class="ford"> Ford Fiesta</h2>
-		<p class="ford"> The Ford Fiesta is a supermini car manufactured by the Ford Motor
-		Company since 1976, now in its sixth generation. The Fiesta has been
-		manufactured in Europe, the USA, Brazil, Argentina, Mexico, Venezuela,
-		China, India, Taiwan, Thailand, and South Africa.
-
-		In 2010, the sixth generation Fiesta (Mark VI)[1] was introduced
-		worldwide, making it the first Fiesta model to be sold in North America
-		since the Fiesta Mark I was discontinued at the end of 1980.
-
-		The Fiesta has sold over 16 million units since 1976,[2][3][4] making it
-		the third best selling Ford marque behind the Escort and the F-series.
-		
-		With its driver Ken Block and suped up mechanics, this For Fiesta really
+		<h2 id="ford"> Ford Fiesta</h2>
+		<p id="ford"> With its driver Ken Block and suped up mechanics, this For Fiesta really
 		<strong> moves!! </strong> Ken Block is a rally car driver who works and is sponsored by both Monster and DC. He is also my son's favorite driver!!</p>
 		<figure>
 			<a href="http://www.flickr.com/photos/25349554@N03/4317339757/">dez&
@@ -110,9 +97,9 @@
 			alt="Ford Fiesta" />
 			<figcaption> The Ford Fiesta. One quick little monster
 		</figure>
-	</div>	
+		
 		<h3 id="gallery"> Gallery </h3>
-			
+		
 		
 		<ol>
 			<li><a href="#top"> Top</a></li>
@@ -120,6 +107,5 @@
 			<li><a href="#audi">Audi</a></li>
 			<li><a href="#ford"> Ford</a></li>
 		</ol>
-	
 	</body>
 </html>
