--- a/Week4/Monroe-Danielle-project4/index.html
+++ b/Week4/Monroe-Danielle-project4/index.html
@@ -193,6 +193,7 @@
 				<option value="r8"> "Audi R8" </option>
 				<option value="fd"> "Ford Fiesta </option>
 			</select>
+		</label>
 			</p>
 			<p>
 				<legend> Feedback about the site </legend>
